--- a/modules/DiscordPings.mdx
+++ b/modules/DiscordPings.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Discord Pings"
 description: "Learn about Ducky's Discord Pings module and how to configure it."
+tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for **Ducky's Discord Pings module** , which gives you full control over how and when you receive pings in your server. The module helps prevent unnecessary pings, avoids ghost pings, and ensures that you’re only notified when it truly matters. To enable and configure this module, use the `/setup` command and navigate to the **Discord Pings** page.
+This page provides the essential configuration options for Ducky's **Discord Pings module** , which gives you full control over how and when you receive pings in your server. The module helps prevent unnecessary pings, avoids ghost pings, and ensures that you’re only notified when it truly matters. To enable and configure this module, use the `/setup` command and navigate to the **Discord Pings** page.
 
 <Steps>
   <Step title="Module Enabled" titleSize="h2">
