--- a/modules/activity.mdx
+++ b/modules/activity.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Activity Management"
 description: "Learn about Ducky's Activity Management module and how to configure it."
+tag: "NEW"
 ---
 
-This page provides the essential configuration options for **Ducky's Activity Management** module, which provides an easy way to manage and track your staff's activity with LOAs and activity waves. To enable and configure this module, use the **`/setup`** command and navigate to the **Activity Management** page.
+This page provides the essential configuration options for Ducky's **Activity Management** module, which provides an easy way to manage and track your staff's activity with LOAs and activity waves. To enable and configure this module, use the **`/setup`** command and navigate to the **Activity Management** page.
 
 <Steps>
   <Step title="LOAs Enabled" titleSize="h2">
@@ -21,7 +22,6 @@ This page provides the essential configuration options for **Ducky's Activity Ma
     The **LOA Nickname** is assigned to staff members with an active LOA.
 
     You may use these variables within the **LOA Nickname**:
-
     - **`{member.name}:`** The name of the member on LOA.
     - **`{member.username}:`** The username of the member on LOA.
   </Step>
