--- a/modules/erlclogs.mdx
+++ b/modules/erlclogs.mdx
@@ -1,9 +1,10 @@
 ---
-description: "Learn about Ducky's ERLC Server Logs module and how to configure it."
 title: "ERLC Server Logs"
+description: "Learn about Ducky's ERLC Server Logs module and how to configure it."
+tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for **Ducky's ERLC Server Logs** module, which allows you to monitor, track, and log all in-game activity within your ERLC server. The module creates a centralized system for organizing server events, ensuring actions are properly recorded and easily accessible. To enable and configure this module, use the `/setup` command and navigate to the **ERLC Server Logs** page.
+This page provides the essential configuration options for Ducky's **ERLC Server Logs** module, which allows you to monitor, track, and log all in-game activity within your ERLC server. The module creates a centralized system for organizing server events, ensuring actions are properly recorded and easily accessible. To enable and configure this module, use the `/setup` command and navigate to the **ERLC Server Logs** page.
 
 <Steps>
   <Step title="Player Join Logs" titleSize="h2">
