--- a/modules/feedback.mdx
+++ b/modules/feedback.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Feedback"
 description: "Learn about Ducky's Feedback module and how to configure it."
+tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for **Ducky's Feedback** module, which allows your members to submit ratings, reviews, and suggestions for your server. The module creates a centralized system for collecting and managing feedback, ensuring all input is organized and easily accessible. To enable and configure this module, use the `/setup` command and navigate to the **Feedback** page.
+This page provides the essential configuration options for Ducky's **Feedback** module, which allows your members to submit ratings, reviews, and suggestions for your server. The module creates a centralized system for collecting and managing feedback, ensuring all input is organized and easily accessible. To enable and configure this module, use the `/setup` command and navigate to the **Feedback** page.
 
 <Steps>
   <Step title="Suggestions" titleSize="h2">
