--- a/modules/welcome.mdx
+++ b/modules/welcome.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Welcome/AutoRoles"
 description: "Learn about Ducky's Welcome/AutoRoles module and how to configure it."
+tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for **Ducky's Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. The module creates a centralized system for welcoming users with a custom message in a specified channel and assigning up to five roles automatically. To enable and configure this module, use the `/setup` command and navigate to the **Welcome/AutoRoles** page.
+This page provides the essential configuration options for Ducky's **Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. The module creates a centralized system for welcoming users with a custom message in a specified channel and assigning up to five roles automatically. To enable and configure this module, use the `/setup` command and navigate to the **Welcome/AutoRoles** page.
 
 <Steps>
   <Step title="Autoroles" iconType="regular" titleSize="h2">
