--- a/modules/shifts.mdx
+++ b/modules/shifts.mdx
@@ -1,9 +1,10 @@
 ---
-title: " Shift Management"
+title: "Shift Management"
 description: "Learn about Ducky's Shift Management module and how to configure it."
+tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for **Ducky's Shift Management** module, which allows staff to manage their shifts efficiently. The module creates a centralized system for organizing and tracking shifts, ensuring accurate records and streamlined administration. Features include shift statistics, administrative controls, and **GameLock**, which ensures staff are in-game before starting their shift. To enable and configure this module, use the `/setup` command and navigate to the **Shift Management** page.
+This page provides the essential configuration options for Ducky's **Shift Management** module, which allows staff to manage their shifts efficiently. The module creates a centralized system for organizing and tracking shifts, ensuring accurate records and streamlined administration. Features include shift statistics, administrative controls, and **GameLock**, which ensures staff are in-game before starting their shift. To enable and configure this module, use the `/setup` command and navigate to the **Shift Management** page.
 
 <Steps>
   <Step title="Shift Logs Channel" titleSize="h2">
