polish: welcome.mdx

--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -41,7 +41,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
   - **`/erlc permissions`:** Members of the configured **ERLC Staff** permission roles are authorized to view all staff members and their permission levels.
   - **`/erlc command`:** Members of the configured **ERLC Staff** permission roles are authorized to send a command to the in-game server.
   - **`/erlc panel`:** Members of the configured **ERLC Staff** permission roles are authorized to use the player panel to manage an in-game player.
-  - **`/erlc tempban`:** Members of the configured **ERLC Staff** permission roles are authorized to temporarily ban a player. The maximum ban duration is defined by the **Tempban for Moderators** configuration on the Roblox Punishments `/setup` page.
+  - **`/erlc tempban`:** Members of the configured **ERLC Staff** permission roles are authorized to temporarily ban a player. The maximum ban duration is defined by the **Tempban for Moderators** configuration on the Roblox Punishments **`/setup`** page.
   - **`/modstats`:** Members of the configured **ERLC Staff** permission roles are authorized to view staff information such as shifts, punishments and modcalls.
   - **`/punish`:** Members of the configured **ERLC Staff** permission roles are authorized to log a punishment on a Roblox user.
   - **`/bolo create`:** Members of the configured **ERLC Staff** permission roles are authorized to create a ban bolo on a member.
@@ -63,7 +63,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
   - **`:log shift pause`:** Members of the configured **ERLC Staff** permission roles are authorized to pause their shift from the in-game server.
   - **`:log shift end`:** Members of the configured **ERLC Staff** permission roles are authorized to end their shift from the in-game server.
   - **`:log shift time`:** Members of the configured **ERLC Staff** permission roles are authorized to view their shift time from the in-game server.
-  - **`:log tempban`:** Members of the configured **ERLC Staff** permission roles are authorized to temporarily ban a player. The maximum ban duration is defined by the **Tempban for Moderators** configuration on the Roblox Punishments `/setup` page.
+  - **`:log tempban`:** Members of the configured **ERLC Staff** permission roles are authorized to temporarily ban a player. The maximum ban duration is defined by the **Tempban for Moderators** configuration on the Roblox Punishments **`/setup`** page.
   - **`:log custom`:** Members of the configured **ERLC Staff** permission roles are authorized to run a customlog from the in-game server.
 </Accordion>
 
