--- a/modules/RobloxPunishments.mdx
+++ b/modules/RobloxPunishments.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's Roblox Punishments module and how to configure
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **Roblox Punishments** module, which allows you to manage, track, and log all punishments within your ERLC server. The module creates a centralized system for organizing in-game moderation actions, ensuring punishments are properly recorded and accessible. To enable and configure this module, use the `/setup` command and navigate to the **Roblox Punishments** page.
+This page provides the essential configuration options for Ducky's **Roblox Punishments** module, which allows you to manage, track, and log all punishments within your ERLC server. The module creates a centralized system for organizing in-game moderation actions, ensuring punishments are properly recorded and accessible. To enable and configure this module, use the **`/setup`** command and navigate to the **Roblox Punishments** page.
 
 <Steps>
   <Step title="Roblox Punishment Logs Channel:" titleSize="h2">
