--- a/modules/economy.mdx
+++ b/modules/economy.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's Server Economy module and how to configure it.
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **Server Economy** module, which allows your members to participate in a fun, engaging in-server economy. The module creates a centralized system for collecting and managing **:quack: Quacks**, ensuring all transactions and balances are properly tracked. To enable and configure this module, use the `/setup` command and navigate to the **Server Economy** page.
+This page provides the essential configuration options for Ducky's **Server Economy** module, which allows your members to participate in a fun, engaging in-server economy. The module creates a centralized system for collecting and managing **:quack: Quacks**, ensuring all transactions and balances are properly tracked. To enable and configure this module, use the **`/setup`** command and navigate to the **Server Economy** page.
 
 <Steps>
   <Step title="Economy Commands" titleSize="h2">
