--- a/modules/erlcintegration.mdx
+++ b/modules/erlcintegration.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's ERLC Integration module and how to configure i
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **ERLC Integration** module, which enables seamless management and monitoring of your ERLC server without needing to join the game. To enable and configure this module, use the `/setup` command and navigate to the ERLC Integration page.
+This page provides the essential configuration options for Ducky's **ERLC Integration** module, which enables seamless management and monitoring of your ERLC server without needing to join the game. To enable and configure this module, use the **`/setup`** command and navigate to the ERLC Integration page.
 
 <Steps>
   <Step title="In-Game Role" titleSize="h2">
