--- a/modules/erlcstatus.mdx
+++ b/modules/erlcstatus.mdx
@@ -4,13 +4,13 @@ description: "Learn about Ducky's ERLC Server Status module and how to configure
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **ERLC Server Status** module, which allows you to display live server statistics directly in your Discord server. The module creates a centralized system for monitoring server activity, ensuring key metrics are always visible and up to date. To enable and configure this module, use the `/setup` command and navigate to the **ERLC Server Status** page.
+This page provides the essential configuration options for Ducky's **ERLC Server Status** module, which allows you to display live server statistics directly in your Discord server. The module creates a centralized system for monitoring server activity, ensuring key metrics are always visible and up to date. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Server Status** page.
 
 <Steps>
   <Step title="Server Status Message" titleSize="h2">
     <Steps>
       <Step title="Channel" icon="hashtag" titleSize="h3">
-        The **Channel** is a configurable setting in the `/setup` page, this is where your **ERLC Server Status Message** will be sent.
+        The **Channel** is a configurable setting in the **`/setup`** page, this is where your **ERLC Server Status Message** will be sent.
       </Step>
       <Step title="Link" icon="link" titleSize="h3">
         The **Link** option is a non-configurable option which just displays a quick-link to your **ERLC Server Status Message**.
@@ -22,6 +22,6 @@ This page provides the essential configuration options for Ducky's **ERLC Server
   </Step>
   <Step title="Server Status Channels" titleSize="h2">
     With Ducky's **ERLC Server Status** module you are able to configure a variety of status channels to display various types of statistics.\
-    To create a status channel, naviage to the **ERLC Server Status** page using the `/setup` command and use the dropdown menu and select "Create Server Status Channel". Then you are able to create **3** Server Status Channels, or **6** if you have **Ducky Plus\+**. Then using the variables found using the dropdown menu you can make your Server Status Channels display whatever you want\!
+    To create a status channel, naviage to the **ERLC Server Status** page using the **`/setup`** command and use the dropdown menu and select "Create Server Status Channel". Then you are able to create **3** Server Status Channels, or **6** if you have **Ducky Plus\+**. Then using the variables found using the dropdown menu you can make your Server Status Channels display whatever you want\!
   </Step>
 </Steps>
