--- a/modules/shifts.mdx
+++ b/modules/shifts.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's Shift Management module and how to configure i
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **Shift Management** module, which allows staff to manage their shifts efficiently. The module creates a centralized system for organizing and tracking shifts, ensuring accurate records and streamlined administration. Features include shift statistics, administrative controls, and **GameLock**, which ensures staff are in-game before starting their shift. To enable and configure this module, use the `/setup` command and navigate to the **Shift Management** page.
+This page provides the essential configuration options for Ducky's **Shift Management** module, which allows staff to manage their shifts efficiently. The module creates a centralized system for organizing and tracking shifts, ensuring accurate records and streamlined administration. Features include shift statistics, administrative controls, and **GameLock**, which ensures staff are in-game before starting their shift. To enable and configure this module, use the **`/setup`** command and navigate to the **Shift Management** page.
 
 <Steps>
   <Step title="Shift Logs Channel" titleSize="h2">
