--- a/modules/staff.mdx
+++ b/modules/staff.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's Staff Management module and how to configure i
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **Staff Management** module, which allows you to manage your staff team effectively. The module creates a centralized system for issuing infractions, handling promotions, and maintaining staff records, ensuring your team is organized and accountable. To enable and configure this module, use the `/setup` command and navigate to the **Staff Management** page.
+This page provides the essential configuration options for Ducky's **Staff Management** module, which allows you to manage your staff team effectively. The module creates a centralized system for issuing infractions, handling promotions, and maintaining staff records, ensuring your team is organized and accountable. To enable and configure this module, use the **`/setup`** command and navigate to the **Staff Management** page.
 
 <Steps>
   <Step title="Infractions Channel" titleSize="h2">
