--- a/modules/welcome.mdx
+++ b/modules/welcome.mdx
@@ -1,19 +1,19 @@
 ---
 title: "Welcome/AutoRoles"
 description: "Learn about Ducky's Welcome/AutoRoles module and how to configure it."
-tag: "UNPOLISHED"
+tag: "NEW"
 ---
 
-This page provides the essential configuration options for Ducky's **Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. The module creates a centralized system for welcoming users with a custom message in a specified channel and assigning up to five roles automatically. To enable and configure this module, use the `/setup` command and navigate to the **Welcome/AutoRoles** page.
+This page provides the essential configuration options for Ducky's **Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. To enable and configure this module, use the **`/setup`** command and navigate to the **Welcome/AutoRoles** page.
 
 <Steps>
-  <Step title="Autoroles" iconType="regular" titleSize="h2">
-    **Auto-Assign Roles** Allows you to select up to 5 roles that are automatically assigned to a user when they join the server.
+  <Step title="AutoRoles" titleSize="h2">
+    The **AutoRoles** are the roles that are automatically assigned to a user when they join the Discord server.
   </Step>
   <Step title="Welcome Channel" titleSize="h2">
-    **Welcome Message** Lets you choose a channel where the welcome message will be sent.
+    The **Welcome Channel** is where welcome messages are sent.
   </Step>
   <Step title="Welcome Message" titleSize="h2">
-    **Welcome Message Configuration** Allows you to customize the welcome message, choose whether to use an embed, and enhance the message with a list of available variables.
+    The **Welcome Message** is what is sent when a member joins the Discord server. 
   </Step>
 </Steps>
