polish staff.mdx

--- a/modules/activity.mdx
+++ b/modules/activity.mdx
@@ -11,9 +11,7 @@ This page provides the essential configuration options for Ducky's **Activity Ma
     Enabling this option will allow your staff members to request a **Leave of Absence** via the **`/loa request`** command.
   </Step>
   <Step title="LOA Logs Channel" titleSize="h2">
-    The **LOA Logs Channel** is all LOA requests and logs will be sent.
-
-    Any user with access to this channel can accept or deny LOA requests.
+    The **LOA Logs Channel** is where all LOA requests and logs will be sent. Any user with access to this channel can accept or deny LOA requests.
   </Step>
   <Step title="LOA Role" titleSize="h2">
     The **LOA Role** is assigned to staff members with an active LOA.
