polish erlcintegration.mdx (and more)

--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -47,7 +47,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
   - **`/bolo create`:** Members of the configured **ERLC Staff** permission roles are authorized to create a ban bolo on a member.
   - **`/shift manage`:** Members of the configured **ERLC Staff** permission roles are authorized to manage their own shift.
   - **`/shift active`:** Members of the configured **ERLC Staff** permission roles are authorized to view the active shifts.
-  - **`/shfit time`:** Members of the configured **ERLC Staff** permission roles are authorized to view their shift time.
+  - **`/shift time`:** Members of the configured **ERLC Staff** permission roles are authorized to view their shift time.
   - **`/shift history`:** Members of the configured **ERLC Staff** permission roles are authorized to view their shift history.
   - **`/shift leaderboard`:** Members of the configured **ERLC Staff** permission roles are authorized to view the server's shift leaderboard.
   - **`/loa request`:** Members of the configured **ERLC Staff** permission roles are authorized to request an Leave of Absence.
@@ -115,6 +115,6 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
   - **`/automations list`:** Members with the **Manage Server** permission are authorized to view all automations in a server.
   - **`/automations delete`:** Members with the **Manage Server** permission are authorized to delete an automation.
   - **`/automations edit`:** Members with the **Manage Server** permission are authorized to edit an automation.
-  - **`/syncbans`:** Members with the **Manage Server** permission are authorized to sync bans between the ERLC server and Discord server.
+  - **`/syncbans`:** Members with the **Manage Server** permission are authorized to sync bans between the ERLC private server and Discord server.
   - **`/balance`:** Members with the **Manage Server** permission are authorized to edit and reset a user's economy balance.
 </Accordion>
