--- a/modules/RobloxVerification.mdx
+++ b/modules/RobloxVerification.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's Roblox Verification module and how to configur
 tag: "UNPOLISHED"
 ---
 
-This page provides the essential configuration options for Ducky's **Roblox Verification** module, which allows you to manage and secure player verification within your ERLC server. The module creates a centralized system for confirming player identities, ensuring that only verified users can access server features. To enable and configure this module, use the **`/setup`** command and navigate to the **Roblox Verification** page.
+This page provides the essential configuration options for Ducky's **Roblox Verification** module, which allows you to manage and secure player verification within your ERLC private server. The module creates a centralized system for confirming player identities, ensuring that only verified users can access server features. To enable and configure this module, use the **`/setup`** command and navigate to the **Roblox Verification** page.
 
 ## **Verified Nickname Variables:**
 
