--- a/modules/tickets.mdx
+++ b/modules/tickets.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Tickets"
 description: "Learn more about Ducky's Ticket System, and how to configure it."
+tag: "UNPOLISHED"
 ---
 
 This page provides the essential configuration options for Ducky's **Ticket Module**, which gives you full control over tickets within Ducky. Allowing members to contact support staff for any issues or concerns you may have. To configure and setup the tickets module, use the `/setup` command and navigate to the **Tickets** page.
