--- a/modules/erlclogs.mdx
+++ b/modules/erlclogs.mdx
@@ -4,7 +4,7 @@ description: "Learn about Ducky's ERLC Server Logs module and how to configure i
 tag: "NEW"
 ---
 
-This page provides the essential configuration options for Ducky's **ERLC Server Logs** module, which allows you to monitor, track, and log all in-game activity within your ERLC server. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Server Logs** page.
+This page provides the essential configuration options for Ducky's **ERLC Server Logs** module, which allows you to monitor, track, and log all in-game activity within your ERLC private server. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Server Logs** page.
 
 <Steps>
   <Step title="Player Join Logs" titleSize="h2">
