--- a/modules/erlcintegration.mdx
+++ b/modules/erlcintegration.mdx
@@ -1,7 +1,7 @@
 ---
 title: "ERLC Integration"
 description: "Learn about Ducky's ERLC Integration module and how to configure it."
-tag: "UNPOLISHED"
+tag: "NEW"
 ---
 
 This page provides the essential configuration options for Ducky's **ERLC Integration** module, which enables seamless remote management and monitoring of your ERLC private server. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Integration** page.
