--- a/misc/automations.mdx
+++ b/misc/automations.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Automations"
-description: "Learn all about Automations and how to take advantage of them using Ducky."
+description: "Learn how to automate your server with Ducky."
+tag: "UNPOLISHED"
 ---
 
 Automations are a sequence of actions that happen once your **trigger** is met. This can be selected in the editor. To start creating automations, use the command `/automations create`
