--- a/misc/messageeditor.mdx
+++ b/misc/messageeditor.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Message Editor"
-description: "Learn more about the Message Editor and how to use it."
+description: "Learn how to create messages using the Message Editor."
+tag: "UNPOLISHED"
 ---
 
 The message editor is seen across Ducky, and is used to fully customize embeds that are found in Sessions, Welcome Messages, Tickets, and more. You can also create a message with the`/message` command.
