add: Embed Editor page

--- a/modules/erlcintegration.mdx
+++ b/modules/erlcintegration.mdx
@@ -14,7 +14,7 @@ This page provides the essential configuration options for Ducky's **ERLC Integr
     </Warning>
   </Step>
   <Step title="ERLC Server" titleSize="h2">
-    The **ERLC Server** is the linked ERLC private server. Learn how to Link your ERLC Private Server [here](../tutorials/linkerlc).
+    The **ERLC Server** is the linked ERLC private server. Learn how to Link your ERLC Private Server [here](/tutorials/linkerlc).
   </Step>
   <Step title="Advanced ERLC Command Permissions" titleSize="h2">
     The **Advanced ERLC Command Permissions** toggle determines whether or not your staff team have access to **`/erlc command`**. 
@@ -24,10 +24,10 @@ This page provides the essential configuration options for Ducky's **ERLC Integr
     When **disabled**, only members of the configured **ERLC Manager** roles can access **`/erlc command`** with the Co-Owner permission level.
   </Step>
   <Step title="ERLC Command Logs Channel" titleSize="h2">
-    The **ERLC Command Logs Channel** is the channel that contains the ERLC Command Logs webhook. For more information, click [here](../tutorials/ingamecmds).
+    The **ERLC Command Logs Channel** is the channel that contains the ERLC Command Logs webhook. For more information, click [here](/tutorials/ingamecmds).
   </Step>
   <Step title="ERLC Kick/Ban Logs Channel" titleSize="h2">
-    The **ERLC Kick/Ban Logs Channel** is the channel that contains the ERLC Kick/Ban Logs webhook. For more information, click [here](../tutorials/ingamecmds).
+    The **ERLC Kick/Ban Logs Channel** is the channel that contains the ERLC Kick/Ban Logs webhook. For more information, click [here](/tutorials/ingamecmds).
   </Step>
   <Step title="Auto Log Kicks/BOLOs" titleSize="h2">
     The **Auto Log Kicks/BOLOs** toggle determines whether or not Ducky automatically reads logs from the configured **ERLC Kick/Ban Logs Channel** in order to automatically log punishments and/or complete active BOLOs.
