--- a/modules/welcome.mdx
+++ b/modules/welcome.mdx
@@ -8,7 +8,7 @@ This page provides the essential configuration options for Ducky's **Welcome/Aut
 
 <Steps>
   <Step title="AutoRoles" titleSize="h2">
-    The **AutoRoles** are the roles that are automatically assigned to a user when they join the Discord server.
+    The **AutoRoles** are automatically assigned to a user when they join the Discord server.
   </Step>
   <Step title="Welcome Channel" titleSize="h2">
     The **Welcome Channel** is where welcome messages are sent.
