--- a/modules/discordmod.mdx
+++ b/modules/discordmod.mdx
@@ -8,11 +8,13 @@ This page provides the essential configuration options for Ducky's **Discord Mod
 
 <Steps>
   <Step title="Modlogs Channel" titleSize="h2">
-    - This is where all moderation actions and log messages will be sent.
-    - Logged moderation actions include warning a member, muting a member, unmuting a member, kicking a member, banning a member, unbanning a member, purging messages, locking a channel, unlocking a channel, editing a case, and voiding a case via Ducky.
+    The **Modlogs Channel** is where all moderation actions and log messages will be sent.
+
+    Logged moderation actions include warning a member, muting a member, unmuting a member, kicking a member, banning a member, unbanning a member, purging messages, locking a channel, unlocking a channel, editing a case, and voiding a case via Ducky.
   </Step>
   <Step title="Appeal Links" titleSize="h2">
-    - The **Appeal Link** is an optional URL included in the DM sent to a user when they are moderated.
-    - This should direct the user to your **appeal system**, such as an **appeal.gg** link, a **Google Form**, or a **Discord Server**.
+    The **Appeal Link** is an optional URL included in the DM sent to a user when they are moderated.
+
+    This should direct the user to your **appeal system**, such as an **appeal.gg** link, a **Google Form**, or a **Discord Server**.
   </Step>
 </Steps>
